force-app/main/default/objects/CCMI__Work__c/CCMI__Work__c.object-meta.xml
<CustomObject>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TE-{00000000}</displayFormat>
        <label>Time Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>