force-app/main/default/objects/CCMI__Work__c/fields/CCMI__Administration__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Administration__c</fullName>
    <label>Administration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PTO</fullName>
            </value>
            <value>
                <fullName>Sick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>