force-app/main/default/objects/CCMI__Work__c/fields/CCMI__Case__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>