force-app/main/default/objects/CCMI__Work__c/fields/CCMI__Date__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Date__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>