force-app/main/default/objects/CCMI__Work__c/fields/CCMI__HHmm__c.field-meta.xml
<CustomField>
    <fullName>CCMI__HHmm__c</fullName>
    <label>Hours</label>
    <length>12</length>
    <type>Text</type>
</CustomField>