force-app/main/default/objects/CCMI__Work__c/fields/CCMI__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>