force-app/main/default/objects/CCMI__Work__c/fields/CCMI__Parent__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Parent__c</fullName>
    <label>Parent</label>
    <length>18</length>
    <type>Text</type>
</CustomField>