force-app/main/default/objects/CCMI__Work__c/fields/CCMI__Timesheet__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Timesheet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Timesheet</label>
    <referenceTo>CCMI__Timesheet__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>